--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+node_modules
+.vscode
+.jekyll-metadata
+.sass-cache
 _site
 _functions
-.sass-cache
-.jekyll-metadata
-.vscode
-node_modules
+netlify.toml
+*.private*
