--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-buffer": "0.0.2",
     "gulp-connect": "^5.6.1",
     "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.4.0",
     "gulp-responsive": "^2.10.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
@@ -42,7 +43,9 @@
     "util": "^0.11.0",
     "yamljs": "^0.3.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "googleapis": "^33.0.0"
+  },
   "browserslist": [
     "> 0.2%",
     "last 5 versions",
